<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".ui.login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_top_spalsh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/logousu"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/logo_usu"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/divisi_pediatric"
                android:gravity="right"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/logo_periksa_yook_v2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:padding="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputLayout"
                android:theme="@style/EditScreenTextInputLayoutStyle">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/textInputLayout"
                android:textColorHint="@color/textInputLayout"
                android:theme="@style/EditScreenTextInputLayoutStyle">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_lock_white"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_login"
                    android:fontFamily="@font/calibri"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/textInputLayout"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/button_register"
                    android:fontFamily="@font/calibri"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/textInputLayout"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <TextView
                android:id="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/calibri"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="#96ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>