<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.admin.ui.dokter.AddDokterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile_dokter"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/profile"
                android:layout_gravity="center"
                android:paddingTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputBlack"
                android:theme="@style/EditScreenTextInputLayoutStyleBlack">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputBlack"
                android:theme="@style/EditScreenTextInputLayoutStyleBlack">

                <EditText
                    android:id="@+id/edit_spec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/spesialis"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="Autofill,TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputBlack"
                android:theme="@style/EditScreenTextInputLayoutStyleBlack">

                <EditText
                    android:id="@+id/edit_rumahsakit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/dinas"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="Autofill,TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputBlack"
                android:theme="@style/EditScreenTextInputLayoutStyleBlack">

                <EditText
                    android:id="@+id/edit_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/alamat_pratik"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputBlack"
                android:theme="@style/EditScreenTextInputLayoutStyleBlack">

                <AutoCompleteTextView
                    android:id="@+id/edit_jekel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/jenis_kelamin"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputBlack"
                android:theme="@style/EditScreenTextInputLayoutStyleBlack">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textInputBlack"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/textInputBlack"
                android:theme="@style/EditScreenTextInputLayoutStyleBlack">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_dokter"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_appointment"
                    android:fontFamily="@font/calibri"
                    android:text="@string/tambah_dokter"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/textInputLayout"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>