<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".ui.patient.DetailDoctorActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView

                android:id="@+id/img_dokter_detail"
                android:layout_width="120dp"
                android:layout_height="120dp"
                tools:src="@drawable/profile"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/txt_nama_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_medium"
                tools:text="Afif Nor Yusuf"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="top"
                    android:fontFamily="@font/poppins_medium"
                    android:textStyle="normal"
                    android:text="@string/jenis_kelamin"/>

                <TextView
                    android:id="@+id/txt_jekel_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins"
                    android:textStyle="normal"
                    tools:text="Mata"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="top"
                    android:fontFamily="@font/poppins_medium"
                    android:textStyle="normal"
                    android:text="@string/spesialis"/>

                <TextView
                    android:id="@+id/txt_spesialis_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins"
                    android:textStyle="normal"
                    tools:text="Mata"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_gravity="top"
                    android:fontFamily="@font/poppins_medium"
                    android:textStyle="normal"
                    android:text="@string/tempat_praktik"/>

                <TextView
                    android:id="@+id/txt_pratik_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins"
                    tools:text="Rumah sakit Guna Guna, hehehe just kidding"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="6dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins_medium"
                    android:textStyle="normal"
                    android:layout_gravity="top"
                    android:text="@string/alamat_pratik"/>

                <TextView
                    android:id="@+id/txt_alamat_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins"
                    tools:text="Jl. Sima dan diu sasa sa sa sa as aasa"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins_medium"
                    android:textStyle="normal"
                    android:text="@string/status"/>

                <TextView
                    android:id="@+id/txt_status_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/poppins"
                    tools:text="On"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>